--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -42,7 +42,7 @@
     display: flex;
     align-items: center;
     gap: 6px;
-    padding: 4px 8px;
+    padding: 4px 5px;
     border-radius: 4px;
     transition: all 0.3s ease;
     position: relative;
