--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,7 +717,7 @@ label {
   color: var(--head-alt-color);
 }
 .header-section .navbar {
-  padding: 12px 4px;
+  padding: 12px 2px;
 }
 .header-section .navbar .navbar-collapse .navbar-nav .nav-item .nav-link,
 .header-section .navbar .navbar-collapse .navbar-nav .nav-item .dropdown-item {
